# ECHRAa

./: .replit  app.py  auth.py  create_dummy_model.py  create_lightweight_model.py  create_simple_model.py  main.py  pyproject.toml  replit_auth.py  stripe_service.py
.config/pulse/: cookie
Model/: keras_model.h5
attached_assets/: Pasted--Pyth-1746446450447.txt  datacollection.py  test.py  utube.txt
data/: labels.txt  translations.json
instance/: arabic_sign_language.db
models/: database.py  oauth.py  session.py  session_fixed.py  user.py
static/css/: style.css
static/js/: camera.js  gesture_recognition.js  main.js
templates/: base.html  dataset_collection.html  forgot_password.html  index.html  kids_mode.html  learn.html  login.html  payment_success.html  pricing.html  signup.html  teacher_mode.html  upload_model.html
utils/: arabic_text_utils.py  hand_detector.py  sign_classifier.py  text_to_speech.py
